# career-repo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZABLE-COVER-LETTERS.md  README.md  SPEC.md  config.yml  pyproject.toml  start.sh  stop.sh
.claude/: settings.json
.claude/skills/refresh-yourself/: SKILL.md
.claude/skills/restart/: SKILL.md
.claude/skills/run-spec/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/stop/: SKILL.md
.devcontainer/: devcontainer.json
agent-runtime/: pyproject.toml
agent-runtime/src/agent_runtime/: __init__.py  agent_run.py  agent_run_store.py  agent_runtime.py  agent_sdk.py
agent-runtime/src/agent_runtime/claude/: __init__.py  claude_agent_sdk.py
api/: __init__.py  config.py  main.py
api/db/: __init__.py  connection.py  migrations.py
api/db/daos/: __init__.py
api/models/: __init__.py
api/models/dtos/: __init__.py
api/models/entities/: __init__.py
api/models/types/: __init__.py  exceptions.py  models.py
api/routers/: __init__.py  get_status.py
api/routers/agent/: __init__.py  (+4 more)
api/services/: claude_cli.py  db_stats.py  github_release.py  upgrade.py
db/migrations/: 0000_baseline.sql  0001_agent_run_meta.sql  0002_email_opportunity_organization_name.sql  0003_opportunity_similarity.sql  0004_drop_agent_run.sql  0005_email_opportunity_location.sql  0006_decline_reason.sql  0007_decline_reason_not_for_me.sql  0008_opportunity_version_archive_reason.sql  0009_opportunity_status_simplification.sql
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  index.tsx
(+199 files in other folders)
