[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-repo"
version = "0.0.0"
description = "A local-first, private career tracking tool that runs entirely on your machine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.31.1",
    "pydantic>=2.9.2",
    "pyyaml==6.0.1",
    "markdown>=3.7",
    "fpdf2>=2.7.9",
    "claude-agent-sdk>=0.1.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/donmutti/career-repo"
Repository = "https://github.com/donmutti/career-repo"

[tool.setuptools]
packages = ["api"]
